# system_baseline/openapi/api.spec.yaml
@@ -20,6 +20,8 @@ paths:
       parameters:
         - $ref: '#/components/parameters/offsetParam'
         - $ref: '#/components/parameters/limitParam'
+        - $ref: '#/components/parameters/orderByParam'
+        - $ref: '#/components/parameters/orderHowParam'
       responses:
         '200':
           description: a paginated list of baselines
@@ -58,11 +60,13 @@ paths:
       - $ref: '#/components/parameters/BaselineIds'
     get:
       summary: fetch one or more Baseline objects
-      description: "Fetch one Baseline object"
+      description: "Fetch one or more Baseline objects"
       operationId: system_baseline.views.v0.get_baselines_by_ids
       parameters:
         - $ref: '#/components/parameters/offsetParam'
         - $ref: '#/components/parameters/limitParam'
+        - $ref: '#/components/parameters/orderByParam'
+        - $ref: '#/components/parameters/orderHowParam'
       responses:
         '200':
           description: a paginated list of baselines
@@ -297,6 +301,28 @@ components:
               value:
                 type: string
   parameters:
+    orderByParam:
+      name: order_by
+      in: query
+      required: false
+      schema:
+        default: "display_name"
+        type: string
+        enum:
+          - display_name
+          - created_on
+      description: Ordering field name, defaults to display_name
+    orderHowParam:
+      name: order_how
+      in: query
+      required: false
+      schema:
+        default: "ASC"
+        type: string
+        enum:
+          - ASC
+          - DESC
+      description: Direction of the ordering, defaults to ASC
     offsetParam:
       name: offset
       in: query
